workspace/webServiceExpose/target/classes/META-INF/jkube/openshift/soapservice-service.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/path: /metrics
    prometheus.io/port: "9779"
    prometheus.io/scrape: "true"
  labels:
    expose: "true"
    app: soapService
    provider: jkube
    version: 1.0.0-SNAPSHOT
    group: org.mycompany
  name: soapservice
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: soapService
    provider: jkube
    group: org.mycompany
