workspace/webServiceExpose/target/classes/META-INF/jkube/openshift/soapservice-route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: soapService
    provider: jkube
    version: 1.0.0-SNAPSHOT
    group: org.mycompany
  name: soapservice
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: soapservice
